--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -25,7 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "x= np.ones(5)\n",
+    "x"
    ]
   },
   {
@@ -43,7 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "y=np.zeros(5)\n",
+    "y"
    ]
   },
   {
@@ -61,7 +65,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "added_Matriex= x+y\n",
+    "added_Matriex"
    ]
   },
   {
@@ -79,7 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "x.ndim\n",
+    "x.shape\n",
+    "x.size\n",
+    "x.dtype"
    ]
   },
   {
@@ -103,7 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "w= np.array([[11,12],[13,14],[15,16]])\n",
+    "w"
    ]
   },
   {
@@ -121,7 +133,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "z= np.array([[1],[2],[3]])\n",
+    "z"
    ]
   },
   {
@@ -139,7 +153,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray=np.hstack((z,w))\n",
+    "newArray"
    ]
   },
   {
@@ -157,7 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "for element in newArray:\n",
+    "    print(element)"
    ]
   },
   {
@@ -175,7 +193,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray.transpose()\n",
+    "newArray"
    ]
   },
   {
@@ -190,10 +210,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aea004df",
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray+=-1"
    ]
   },
   {
@@ -211,7 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray.max()\n",
+    "newArray.min()"
    ]
   },
   {
@@ -229,7 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray[0]"
    ]
   },
   {
@@ -247,7 +273,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray[1][1]"
    ]
   },
   {
@@ -265,7 +292,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(newArray[0][0])\n",
+    "print(newArray[2][1])"
    ]
   },
   {
@@ -283,7 +312,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray.reshape(9,1)\n",
+    "newArray"
    ]
   },
   {
@@ -301,7 +332,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray.reshape(3,3)\n",
+    "newArray"
    ]
   },
   {
@@ -311,6 +344,18 @@
    "source": [
     "# Well Done 🎉"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#THAAAAAAAAAAAAAAAAAAAAANKS "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "370ba53f95db3473"
   }
  ],
  "metadata": {
