--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -33,7 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "np.linspace(0,10,15)"
    ]
   },
   {
@@ -59,7 +61,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# writev your code here ^_^\n",
+    "newArray=np.linspace(1.1,12.1,12)\n",
+    "newArray\n",
+    "newArray= newArray.reshape(2,2,3)\n",
+    "newArray"
    ]
   },
   {
@@ -83,7 +89,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "type(newArray)\n",
+    "newArray.dtype\n",
+    "newArray.shape\n",
+    "newArray.size\n",
+    "newArray.ndim\n"
    ]
   },
   {
@@ -104,7 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray2 = newArray.reshape(2, 2, 1, 3)\n",
+    "newArray2\n",
+    "newArray2.ndim\n",
+    "newArray2.shape"
    ]
   },
   {
@@ -126,7 +141,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray3=newArray2.astype(int)\n",
+    "newArray3"
    ]
   },
   {
@@ -147,7 +164,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "for elements in np.nditer(newArray3):\n",
+    "    print(elements)"
    ]
   },
   {
@@ -166,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray3[1, 0, 0, 1]"
    ]
   },
   {
@@ -185,7 +205,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray3[0,1,0,1]\n",
+    "newArray3[0,1,0,2]"
    ]
   },
   {
@@ -208,7 +230,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "np.where(newArray3==8)\n",
+    "newArray3"
    ]
   },
   {
@@ -236,7 +260,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray4=newArray3.reshape(2,3,2)\n",
+    "newArray4"
    ]
   },
   {
@@ -257,7 +283,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "newArray5=np.stack((arr1,arr2))\n",
+    "newArray5"
    ]
   },
   {
