--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Once we install the numpy :  pip install numpy -->  we import it \n",
     "import numpy as np"
    ]
   },
@@ -20,12 +21,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "x = np.array([1])\n",
+    "\n",
+    "print(x)"
    ]
   },
   {
@@ -38,12 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "y = np.array([0])\n",
+    "\n",
+    "\n",
+    "print(y)\n"
    ]
   },
   {
@@ -56,12 +80,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "a = np.concatenate((x , y))\n",
+    "\n",
+    "print(a)\n",
+    "\n"
    ]
   },
   {
@@ -74,12 +111,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dimension of x is:  1\n",
+      "the shape of x is:  (1,)\n",
+      "the size of x is:  1\n",
+      "the data type of x is:  int32\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(\"the dimension of x is: \", x.ndim)\n",
+    "\n",
+    "print(\"the shape of x is: \", x.shape)\n",
+    "\n",
+    "print(\"the size of x is: \", np.size(x))\n",
+    "\n",
+    "print(\"the data type of x is: \", x.dtype)\n"
    ]
   },
   {
@@ -98,12 +154,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "w = np.array([[11,12],[13,14],[15,16]])\n",
+    "\n",
+    "print(w)"
    ]
   },
   {
@@ -116,12 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "z = np.array([1, 2, 3])\n",
+    "print(z)"
    ]
   },
   {
@@ -134,12 +215,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12  1]\n",
+      " [13 14  2]\n",
+      " [15 16  3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "z = np.array([1,2,3])\n",
+    "\n",
+    "w = np.array([[11,12], [13,14], [15,16]])\n",
+    "\n",
+    "\n",
+    "z_reshaped = np.reshape(z, (3,1))\n",
+    "\n",
+    "newArray = np.concatenate((w, z_reshaped), axis=1)\n",
+    "\n",
+    "print(newArray)"
    ]
   },
   {
@@ -152,12 +254,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 12  1]\n",
+      "[13 14  2]\n",
+      "[15 16  3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "for i in newArray:\n",
+    "    print(i)\n",
+    "\n"
    ]
   },
   {
@@ -170,12 +286,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 13 15]\n",
+      " [12 14 16]\n",
+      " [ 1  2  3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "reverse_newArray = np.transpose(newArray)\n",
+    "\n",
+    "print(reverse_newArray)"
    ]
   },
   {
@@ -188,12 +318,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original array is:  [[11 12  1]\n",
+      " [13 14  2]\n",
+      " [15 16  3]]\n",
+      "decremented_array is:  [[10 11  0]\n",
+      " [12 13  1]\n",
+      " [14 15  2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "value_to_subtract = 1\n",
+    "\n",
+    "decremented_array = newArray - value_to_subtract\n",
+    "\n",
+    "print(\"original array is: \", newArray)\n",
+    "print(\"decremented_array is: \", decremented_array)"
    ]
   },
   {
@@ -206,12 +356,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "smallest value is:  1\n",
+      "biggest value is:  16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "smallest_value = np.amin(newArray)\n",
+    "\n",
+    "biggest_value = np.amax(newArray)\n",
+    "\n",
+    "print(\"smallest value is: \", smallest_value)\n",
+    "print(\"biggest value is: \", biggest_value)"
    ]
   },
   {
@@ -224,12 +390,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11 12  1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(newArray[0])\n"
    ]
   },
   {
@@ -242,12 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "\n",
+    "print(newArray[0][1])\n",
+    "\n"
    ]
   },
   {
@@ -255,17 +443,28 @@
    "id": "932b5c3d",
    "metadata": {},
    "source": [
-    "## Q#14: Print the numbers equal 0 and 13 of \"newArray\" using indexing."
+    "## Q#14: Print the numbers equal 1 and 13 of \"newArray\" using indexing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "print(newArray[1][0],newArray[0][2])\n",
+    "\n"
    ]
   },
   {
@@ -278,12 +477,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11]\n",
+      " [12]\n",
+      " [ 1]\n",
+      " [13]\n",
+      " [14]\n",
+      " [ 2]\n",
+      " [15]\n",
+      " [16]\n",
+      " [ 3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "newArray_reshape = newArray.reshape(9,1)\n",
+    "\n",
+    "print(newArray_reshape)"
    ]
   },
   {
@@ -291,17 +510,31 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12  1]\n",
+      " [13 14  2]\n",
+      " [15 16  3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "\n",
+    "newArray_reshape = newArray.reshape(3,3)\n",
+    "\n",
+    "print(newArray_reshape)"
    ]
   },
   {
@@ -329,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
