--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "x = np.ones(2)"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "y = np.zeros(2)"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "a = x + y"
    ]
   },
   {
@@ -79,7 +79,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"x Array Characteristics: \")\n",
+    "print(\"Dimensions:\", x.ndim)\n",
+    "print(\"Size:\", x.size)\n",
+    "print(\"Shape:\", x.shape)\n",
+    "print(\"Data type:\", x.dtype)  "
    ]
   },
   {
@@ -103,7 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11, 12],\n",
+    "              [13, 14],\n",
+    "              [15, 16]])"
    ]
   },
   {
@@ -121,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "z = np.array([1, 2, 3])"
    ]
   },
   {
@@ -139,7 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "z_reshap = z.reshape(3, 1)  \n",
+    "\n",
+    "newArray = np.hstack((z_reshap, w)) "
    ]
   },
   {
@@ -157,7 +165,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "for i in newArray:\n",
+    "    for element in i:\n",
+    "        print(element, end=\" \")\n",
+    "    print() #new line "
    ]
   },
   {
@@ -175,7 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Reverse Array:\")\n",
+    "print(newArray[::-1, ::-1])"
    ]
   },
   {
@@ -193,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "newArray = newArray - 1"
    ]
   },
   {
@@ -211,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Smallest Value:\", np.min(newArray))\n",
+    "print(\"Biggest Value:\", np.max(newArray))"
    ]
   },
   {
@@ -229,7 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"First row:\", newArray[0])"
    ]
   },
   {
@@ -247,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Number equals 12:\", newArray[1][1])"
    ]
   },
   {
@@ -265,7 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Number equals 0:\", newArray[0][0])\n",
+    "print(\"Number equals 13:\", newArray[1][2])"
    ]
   },
   {
@@ -283,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "newArray.reshape(9, 1)"
    ]
   },
   {
@@ -301,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "newArray.reshape(3, 3)"
    ]
   },
   {
