--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "sequence = np.linspace(0, 5, 15)"
    ]
   },
   {
@@ -59,7 +59,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = [1.1, 2.1, 3.1]\n",
+    "arr2 = [4.1, 5.1, 6.1]\n",
+    "arr3 = [7.1, 8.1, 9.1]\n",
+    "arr4 = [10.1, 11.1, 12.1]\n",
+    "\n",
+    "my3DArray = np.array([[arr1, arr2], [arr3, arr4]])"
    ]
   },
   {
@@ -83,7 +88,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Array's type:\", type(my3DArray))\n",
+    "print(\"Array's elements datatype:\", my3DArray.dtype)\n",
+    "print(\"Array's shape:\", my3DArray.shape)\n",
+    "print(\"Array's size:\", my3DArray.size)\n",
+    "print(\"Array's dimension:\", my3DArray.ndim)"
    ]
   },
   {
@@ -104,7 +113,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "my4DArray = my3DArray[np.newaxis, :, :, :]\n",
+    "print(\"New Dimension:\", my4DArray.ndim)\n",
+    "print(\"New Shape:\", my4DArray.shape)"
    ]
   },
   {
@@ -126,7 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "new4DArray = my4DArray.astype(int)\n",
+    "\n",
+    "print(\"My New Array with int type:\")\n",
+    "print(new4DArray)"
    ]
   },
   {
@@ -147,7 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Array element:\")\n",
+    "for i in np.nditer(new4DArray):\n",
+    "    print(i)"
    ]
   },
   {
@@ -166,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Number 8: \",new4DArray[0, 1, 0, 1])"
    ]
   },
   {
@@ -185,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Number 5 & 6:\", new4DArray[0, 0, 1, 1:3])"
    ]
   },
   {
@@ -208,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"Path of the index of number 8:\",  np.where(new4DArray == 8))"
    ]
   },
   {
@@ -236,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "new4DArray.reshape(2, 3, 2)"
    ]
   },
   {
@@ -257,7 +273,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joineArray = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(\"Without the axis \\n\",joineArray)"
    ]
   },
   {
@@ -275,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(\"With axis = 1\\n\",np.concatenate((arr1, arr2), axis=1))"
    ]
   },
   {
@@ -294,7 +315,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "splitArray = np.split(joineArray, 2, axis=1)\n",
+    "\n",
+    "print(\"Split 1:\")\n",
+    "print(splitArray[0])\n",
+    "print(\"Split 2:\")\n",
+    "print(splitArray[1])"
    ]
   }
  ],
