--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 610,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 611,
    "id": "3307454f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "x = np.ones(5)"
    ]
   },
   {
@@ -38,12 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 612,
    "id": "9550b063",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "y = np.zeros(5)"
    ]
   },
   {
@@ -56,12 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 613,
    "id": "71070d1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "xy = x + y"
    ]
   },
   {
@@ -74,12 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 614,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5,) 1 float64 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(x.shape, x.ndim, x.dtype, x.size)"
    ]
   },
   {
@@ -98,12 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 615,
    "id": "b9c7bbb0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "w = np.array([[11, 12],\n",
+    "                 [13, 14],\n",
+    "                 [15, 16]])"
    ]
   },
   {
@@ -116,12 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 616,
    "id": "cee8aba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "z = np.arange(1,4)"
    ]
   },
   {
@@ -134,12 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 617,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11 12]\n",
+      " [ 2 13 14]\n",
+      " [ 3 15 16]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = np.hstack((z[:, np.newaxis], w))\n",
+    "print(newArray)"
    ]
   },
   {
@@ -152,12 +180,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 618,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "11\n",
+      "12\n",
+      "2\n",
+      "13\n",
+      "14\n",
+      "3\n",
+      "15\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "for i in newArray:\n",
+    "    for j in i:\n",
+    "        print(j)\n"
    ]
   },
   {
@@ -170,12 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 619,
    "id": "12e3f0db",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray[::-1, ::-1]"
    ]
   },
   {
@@ -188,12 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 620,
    "id": "aea004df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray - 1"
    ]
   },
   {
@@ -206,12 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 621,
    "id": "4ea08613",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "smallest = np.min(newArray)\n",
+    "biggest = np.max(newArray)\n"
    ]
   },
   {
@@ -224,12 +275,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 622,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15 14  2] [11 10  0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(newArray[0], newArray[-1])"
    ]
   },
   {
@@ -242,12 +302,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 623,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "index = np.where(newArray == 12)\n",
+    "x = index[0][0]\n",
+    "y = index[1][0]\n",
+    "print(newArray[x, y])\n"
    ]
   },
   {
@@ -260,12 +331,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 624,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "# Define the values to search for\n",
+    "values_to_find = [0, 13]\n",
+    "\n",
+    "# Iterate over each value and find its location in newArray\n",
+    "for value in values_to_find:\n",
+    "    if value in newArray:\n",
+    "        indices = np.where(newArray == value)\n",
+    "        for x, y in zip(indices[0], indices[1]):\n",
+    "            print(newArray[x,y])\n"
    ]
   },
   {
@@ -278,12 +367,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 625,
    "id": "35f224ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray.reshape(9,1)"
    ]
   },
   {
@@ -291,17 +381,29 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 626,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[15 14  2]\n",
+      " [13 12  1]\n",
+      " [11 10  0]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "newArray = newArray.reshape(3,3)\n",
+    "print(newArray)\n"
    ]
   },
   {
@@ -329,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
