--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 469,
    "id": "936d4703",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "import numpy as np"
    ]
   },
   {
@@ -28,12 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 470,
    "id": "43bf04a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "sequence = np.linspace(0.0, 10.0, 15)"
    ]
   },
   {
@@ -54,12 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 471,
    "id": "c1c3f9dc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "a1 = np.array([1.1, 2.1, 3.1])\n",
+    "a2 = np.array([4.1, 5.1, 6.1])\n",
+    "a3 = np.array([7.1, 8.1, 9.1])\n",
+    "a4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "arr= np.array([a1, a2, a3, a4]).reshape(2, 2, 3)"
    ]
   },
   {
@@ -78,12 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 472,
    "id": "6e90d6a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> float64 (2, 2, 3) 12 3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(type(arr), arr.dtype, arr.shape, arr.size, arr.ndim)"
    ]
   },
   {
@@ -99,12 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 473,
    "id": "e9f5c88c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 (2, 1, 2, 3)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = arr.reshape(2, 1, 2, 3)\n",
+    "\n",
+    "print(arr1.ndim, arr1.shape)\n"
    ]
   },
   {
@@ -121,12 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 474,
    "id": "8135b045",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[ 1  2  3]\n",
+      "   [ 4  5  6]]]\n",
+      "\n",
+      "\n",
+      " [[[ 7  8  9]\n",
+      "   [10 11 12]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = arr1.astype(int)\n",
+    "print(arr1)"
    ]
   },
   {
@@ -142,12 +185,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 475,
    "id": "a0d58d15",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "for n in np.nditer(arr1):\n",
+    "    print(n)"
    ]
   },
   {
@@ -161,12 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 476,
    "id": "6e12e2d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_\n",
+    "print(arr1[1][0][0][1:2])"
    ]
   },
   {
@@ -180,12 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 477,
    "id": "c3218bcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(arr1[0][0][1][1:3])\n"
    ]
   },
   {
@@ -203,12 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 478,
    "id": "ddaf0146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([1]), array([0]), array([0]), array([1]))\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "print(np.where(arr1 == 8))"
    ]
   },
   {
@@ -231,12 +322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 479,
    "id": "d9b632bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2]\n",
+      " [ 3  4]\n",
+      " [ 5  6]\n",
+      " [ 7  8]\n",
+      " [ 9 10]\n",
+      " [11 12]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr2 = arr1.reshape(6,2)\n",
+    "print(arr2)"
    ]
   },
   {
@@ -252,12 +358,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 480,
    "id": "d6acdeaf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']\n",
+      " ['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined = np.concatenate((arr1, arr2))\n",
+    "print(joined)"
    ]
   },
   {
@@ -270,12 +392,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 481,
    "id": "b849658c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B' 'C' 'D']\n",
+      " ['E' 'F' 'G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "joined_array = np.concatenate((arr1, arr2), axis=1)\n",
+    "print(joined_array)"
    ]
   },
   {
@@ -289,12 +422,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 482,
    "id": "7f7f5e49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['A' 'B']\n",
+      " ['E' 'F']]\n",
+      "[['C' 'D']\n",
+      " ['G' 'H']]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "# write your code here ^_^\n",
+    "split_arrays = np.split(joined_array, 2, axis=1)\n",
+    "print(split_arrays[0])\n",
+    "print(split_arrays[1])"
    ]
   }
  ],
@@ -314,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
